correctif gap input

--- a/frontend/src/components/Elements/InputList.scss
+++ b/frontend/src/components/Elements/InputList.scss
@@ -13,7 +13,7 @@
     border: none;
     outline: none;
     background-color: $buttonColorLight;
-    padding-top: 5%;
+    margin-top: 5%;
     width: 100%;
     height: 48px;
     border-color: none;
